--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"nib": "0.9.1",
 		"mongoose": "3.5.4",
 		"nodemailer": "0.3.37",
-		"browserify": "1.17.2",
+		"browserify": "git://github.com/pharcosyle/node-browserify.git",
 		"convoy": "0.4.1",
 		"convoy-stylus": "0.1.4",
 		"less": "1.3.3",
