--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
 	"name": "phrenetic",
 	"version": "0.1.0",
 	"dependencies": {
-		"coffee-script": "1.4.0",
-		"longjohn": "0.0.4",
-		"underscore": "1.4.3",
+		"coffee-script": "1.6.2",
+		"longjohn": "0.2.0",
+		"underscore": "1.4.4",
 		"underscore.string": "2.3.1",
-		"express.io": "git://github.com/pharcosyle/express.io.git#socket-semantics-fix",
+		"express.io": "1.1.9",
 		"connect-redis": "1.4.5",
-		"jade": "0.28.1",
+		"jade": "0.28.2",
 		"nib": "0.9.1",
-		"mongoose": "3.5.4",
-		"nodemailer": "0.3.37",
+		"mongoose": "3.6.0",
+		"nodemailer": "0.4.1",
 		"browserify": "git://github.com/pharcosyle/node-browserify.git",
 		"convoy": "0.4.1",
 		"convoy-stylus": "0.1.4",
 		"less": "1.3.3",
-		"uglify-js": "2.2.3",
+		"uglify-js": "2.2.5",
 		"mongodb_s3_backup": "0.0.4"
 	},
 	"bin" : {
