--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"jade": "0.28.2",
 		"nib": "0.9.1",
 		"mongoose": "3.6.4",
+		"mongoose-schema-extend": "0.1.3",
 		"nodemailer": "0.4.1",
 		"browserify": "git://github.com/pharcosyle/node-browserify.git",
 		"convoy": "0.4.1",
