--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"convoy-stylus": "0.1.4",
 		"less": "1.4.0",
 		"uglify-js": "2.3.6",
-		"mongodb_s3_backup": "0.0.5",
+		"mongodb_s3_backup": "git://github.com/pharcosyle/node-mongodb-s3-backup.git#patch-1",
 		"handlebars": "1.0.11"
 	},
 	"bin" : {
